--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,9 @@ android {
         applicationId "com.mcphersondev.Hypeman"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 7
-        versionName "1.07"
+        versionCode 8
+        versionName "1.08"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -17,7 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '27.0.3'
+    buildToolsVersion '28.0.3'
     productFlavors {
     }
 }
@@ -33,17 +32,17 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:customtabs:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/json-simple-1.1.1.jar')
     // This library handles authentication and authorization
     implementation 'com.spotify.android:auth:1.0.0-alpha'
     // This library handles music playback
     implementation 'com.spotify.sdk:spotify-player-24-noconnect-2.20b@aar'
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
-    implementation 'com.google.android.gms:play-services-ads:15.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-v13:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
